# vibesql

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
docs/sql/: README.md
docs/sql/functions/: README.md  aggregate_function_calls.md  aggregate_functions.md  approximate_aggregate_functions.md  array_functions.md  bit_functions.md  conditional_expressions.md  conversion_functions.md  date_functions.md  datetime_functions.md  functions_reference.md  interval_functions.md  json_convert.md  json_core.md  json_extract.md  json_functions.md  json_modify.md  mathematical_functions.md  navigation_functions.md  numbering_functions.md  range_functions.md  statistical_aggregate_functions.md  string_case.md  string_format.md  string_functions.md  string_manipulation.md  string_regexp.md  string_search.md  table_functions.md  time_functions.md  time_series_functions.md  timestamp_functions.md  user_defined_aggregates.md  user_defined_functions.md  window_function_calls.md
docs/sql/statements/: README.md  data_definition_language.md  data_manipulation_language.md
docs/sql/syntax/: README.md  clauses.md  (+15 more)
examples/csv_database/: database.rs  execution.rs  main.rs  result.rs  seed.rs
src/: lib.rs  main.rs
src/analyzer/: error.rs  mod.rs  scope.rs  type_checker.rs
src/ast/: expr.rs  mod.rs  stmt.rs  types.rs
src/catalog/: builder.rs  function.rs  mod.rs  schema.rs  type_registry.rs
src/error/: mod.rs
src/lexer/: mod.rs  token.rs
src/parser/: expr.rs  mod.rs  query.rs  stmt.rs
src/types/: mod.rs  sql_type.rs  value.rs
(+7 files in other folders)
